--- a/Unreal/FoodFighingGame/Config/DefaultEngine.ini
+++ b/Unreal/FoodFighingGame/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GlobalDefaultGameMode=/Game/OurGame/Blueprints/GameModes/TestgameMode.TestgameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
